feat: add endpoint form fetching a single user
