# cmd/router/user.router.go
@@ -3,6 +3,7 @@ package router
 import (
 	"github.com/Aboagye-Dacosta/shopBackend/cmd/controller"
 	"github.com/Aboagye-Dacosta/shopBackend/cmd/middleware"
+	"github.com/Aboagye-Dacosta/shopBackend/internal/constants"
 	"github.com/Aboagye-Dacosta/shopBackend/internal/utils"
 )
 
@@ -11,6 +12,7 @@ func (r *Router) initializeUserRoutes(c *controller.Controller) {
 
 	protectRoutes := userRouter.NewRoute().Subrouter()
 	protectRoutes.Use(middleware.AuthMiddleWare)
-	protectRoutes.HandleFunc("", utils.HandlePermissions("view_users", c.HttpGetUsers)).Methods("GET")
+	protectRoutes.HandleFunc("", utils.HandlePermissions(constants.ViewUsers, c.HttpGetUsers)).Methods("GET")
+	protectRoutes.HandleFunc("/{id}", utils.HandlePermissions(constants.ViewUsers, c.HttpGetUserById)).Methods("GET")
 
 }
